--- a/assets/css/developer-theme.css
+++ b/assets/css/developer-theme.css
@@ -360,7 +360,7 @@ p, div, span, li {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  z-index: 9998;
+  z-index: 10001;
   width: 50px;
   height: 50px;
   border-radius: 50%;
